[gd_scene load_steps=5 format=3 uid="uid://1nfjxoy27gmu"]

[ext_resource type="Script" path="res://example/save_slot.gd" id="1_ou5vv"]
[ext_resource type="Texture2D" uid="uid://btq06kdtsv3l4" path="res://images/Save.svg" id="2_adn1g"]
[ext_resource type="Texture2D" uid="uid://crobxyirk3dqt" path="res://images/Load.svg" id="5_6lqsp"]
[ext_resource type="Texture2D" uid="uid://d0x7lwfg088xo" path="res://images/Remove.svg" id="6_45lry"]

[node name="SaveSlot" type="Control"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 80.0
size_flags_horizontal = 3
script = ExtResource("1_ou5vv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 3.0
offset_right = 1132.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 21

[node name="ImageMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="HBoxContainer/ImageMargin"]
layout_mode = 2
texture = ExtResource("2_adn1g")
expand_mode = 2
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NameGroup" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/NameGroup"]
layout_mode = 2
text = "Name: "

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer/NameGroup"]
layout_mode = 2
text = "Save Name"

[node name="DateGroup" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/DateGroup"]
layout_mode = 2
text = "Date: "

[node name="DateLabel" type="Label" parent="HBoxContainer/VBoxContainer/DateGroup"]
layout_mode = 2
text = "Dat Time"

[node name="GameTimeGroup" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/GameTimeGroup"]
layout_mode = 2
text = "Game Time: "

[node name="GameTimeLabel" type="Label" parent="HBoxContainer/VBoxContainer/GameTimeGroup"]
layout_mode = 2
text = "Game Time"

[node name="ButtonsMargin" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ButtonsGroup" type="HBoxContainer" parent="HBoxContainer/ButtonsMargin"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="LoadGame" type="Button" parent="HBoxContainer/ButtonsMargin/ButtonsGroup"]
layout_mode = 2
icon = ExtResource("5_6lqsp")
icon_alignment = 1

[node name="DeleteSlot" type="Button" parent="HBoxContainer/ButtonsMargin/ButtonsGroup"]
layout_mode = 2
icon = ExtResource("6_45lry")
icon_alignment = 1

[connection signal="pressed" from="HBoxContainer/ButtonsMargin/ButtonsGroup/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonsMargin/ButtonsGroup/DeleteSlot" to="." method="_on_delete_slot_pressed"]
